--- a/src/components/Card/Card.styles.scss
+++ b/src/components/Card/Card.styles.scss
@@ -1,12 +1,16 @@
 .articleCard {
-  width: 350px;
-  height: 600px;
-  margin: 5px;
+  width: 300px;
+  height: 550px;
+  margin: 15px;
+  border: 10px solid black;
 }
 .card-img-top {
   height: 250px;
 }
 .card-text {
-  height: 250px;
+  height: 200px;
   overflow: hidden;
+}
+.card-body {
+  justify-content: space-between;
 }
