--- a/src/pages/Details/Details.styles.scss
+++ b/src/pages/Details/Details.styles.scss
@@ -1,6 +1,7 @@
 .detailContainer {
   padding: 0px 200px !important;
   margin-bottom: 50px;
+  background-color: white;
 }
 .imageRow {
   display: flex;
