--- a/src/pages/LandingPage/landingPage.styles.scss
+++ b/src/pages/LandingPage/landingPage.styles.scss
@@ -1,5 +1,5 @@
-.landingPage {
-  background-color: #000;
+html, .landingPage {
+  background-color: #000!important;
   background-image: none;
   height: 100%;
 }
