--- a/src/pages/LandingPage/landingPage.styles.scss
+++ b/src/pages/LandingPage/landingPage.styles.scss
@@ -1,6 +1,4 @@
-html, .landingPage {
-  background-color: #000!important;
-  background-image: none;
+html, body, .landingPage {
   height: 100%;
 }
 
