--- a/src/components/Card/Card.styles.scss
+++ b/src/components/Card/Card.styles.scss
@@ -2,8 +2,7 @@
   width: 300px;
   height: 600px;
   margin: 15px;
-  border: 10px solid black;
-  box-shadow: 8px 8px #929292;
+  box-shadow: -12px 13px 13px -4px rgb(122, 118, 122);
 }
 .card-img-top {
   height: 250px;
